[package]
name = "memento"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"

[dev-dependencies]
num_enum = "0.6.1"
pretty_assertions = "1.2.1"
