[package]
name = "memento"
version = "0.1.0"
edition = "2021"
description = "Memory allocation tracker. A bad memory profiler for production."
readme = "README.md"
keywords = ["allocator", "profiler", "memory", "performance"]
license = "MIT"
repository = "https://github.com/untitaker/memento"
include = ["src/**/*", "LICENSE", "README.md", "tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
once_cell = "1.17.1"

[dev-dependencies]
num_enum = "0.6.1"
pretty_assertions = "1.2.1"
